--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,8 @@ extra-source-files:
 
 dependencies:
     - base >= 4.7 && < 5
+    - megaparsec
+    - raw-strings-qq
 
 default-extensions:
     - BangPatterns
