--- a/advent-of-code-y2022.cabal
+++ b/advent-of-code-y2022.cabal
@@ -62,6 +62,7 @@ library
       base >=4.7 && <5
     , megaparsec
     , raw-strings-qq
+    , split
   default-language: Haskell2010
 
 test-suite advent-of-code-y2022-test
@@ -105,4 +106,5 @@ test-suite advent-of-code-y2022-test
     , hspec
     , megaparsec
     , raw-strings-qq
+    , split
   default-language: Haskell2010
