--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,7 @@ dependencies:
     - base >= 4.7 && < 5
     - megaparsec
     - raw-strings-qq
+    - split
 
 default-extensions:
     - BangPatterns
