--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,7 @@ extra-source-files:
 
 dependencies:
     - base >= 4.7 && < 5
+    - containers
     - megaparsec
     - raw-strings-qq
     - split
@@ -32,6 +33,7 @@ default-extensions:
     - FlexibleContexts
     - FlexibleInstances
     - GeneralizedNewtypeDeriving
+    - ImportQualifiedPost
     - InstanceSigs
     - KindSignatures
     - LambdaCase
