--- a/package.yaml
+++ b/package.yaml
@@ -15,6 +15,7 @@ extra-source-files:
 dependencies:
     - base >= 4.7 && < 5
     - containers
+    - intervals
     - megaparsec
     - raw-strings-qq
     - split
