--- a/package.yaml
+++ b/package.yaml
@@ -15,7 +15,7 @@ extra-source-files:
 dependencies:
     - base >= 4.7 && < 5
     - containers
-    - intervals
+    - data-interval
     - megaparsec
     - raw-strings-qq
     - split
