--- a/advent-of-code-y2022.cabal
+++ b/advent-of-code-y2022.cabal
@@ -36,6 +36,8 @@ library
       AoC.Day04.Solution
       AoC.Day05.Input
       AoC.Day05.Solution
+      AoC.Day06.Input
+      AoC.Day06.Solution
       AoC.Solver
   other-modules:
       Paths_advent_of_code_y2022
